# cubesat-1-sw

./: .gitignore  .gitmodules  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  rust.yml
boards/nucleo-f429zi/: Cargo.toml
boards/nucleo-f429zi/src/: button.rs_  led.rs_  lib.rs  serial.rs  spi.rs_  temp.rs_  timer.rs_  uid.rs_
boards/nucleo-f446re/: Cargo.toml
boards/nucleo-f446re/src/: button.rs  led.rs  lib.rs  serial.rs
boards/nucleo-f767zi/: Cargo.toml
boards/nucleo-f767zi/src/: button.rs  event_pin.rs  led.rs  lib.rs  serial.rs  spi.rs  spi_adapter.rs  temp.rs  uid.rs
boards/stm32vldiscovery/: Cargo.toml
boards/stm32vldiscovery/src/: button.rs  led.rs  lib.rs  serial.rs
docs/: todo.txt  workspace.dsl
docs/design/: serial-frame-protocol.md
drivers/cc1101-async/: Cargo.toml  README.md
drivers/cc1101-async/src/: lib.rs
firmware/adcs/: todo.txt
firmware/com/: todo.txt
firmware/eps/: todo.txt
firmware/obc/cubesat-1-fw-obc/: Cargo.toml  README.md  build.rs  memory.x  memory_stm32f4xx.x  memory_stm32vldiscovery.x  openocd_stm32f4xx.cfg  openocd_stm32f7xx.cfg  rust-toolchain.toml  todo.txt
firmware/obc/cubesat-1-fw-obc/.cargo/: config  config.toml
firmware/obc/cubesat-1-fw-obc/examples/: button_and_leds.rs  cc1101_rx_tx_w_button.rs  hello_cubesat.rs  hello_cubesat_f4.rs  hello_stm32vldiscovery.rs  rtic_button_and_led_nucleo_f446re.rs  rtic_button_and_leds.rs  rtic_tasks.rs  serial_nucleo_f446re.rs  serial_stm32vldiscovery.rs  temp_on_serial.rs  test_cc1101.rs
firmware/obc/cubesat-1-fw-obc/src/: board_demo.rs  bsp.rs  cc1101_wrapper.rs  main.rs
modules/cc1101-wrapper/: Cargo.toml
modules/cc1101-wrapper/src/: lib.rs
modules/frame-processing/: Cargo.toml
modules/frame-processing/src/: frame.rs  lib.rs
modules/sys-time/: Cargo.toml
modules/sys-time/src/: lib.rs
tests/: SimpleTests.robot  resources.robot
tools/: bad_frame.py  good_frame.py  help_serial.py  serial_link.py  todo.txt
