[package]
authors = ["Andrei Basarab <andy.basarab@gmail.com>"]
name = "nucleo-f767zi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.2"
embedded-hal = "0.2.7"
fugit = "0.3.7"
nb = "1.0"
stm32f7xx-hal = { version = "0.7.0", features = ["stm32f767", "rt"] }
