[package]
authors = ["Andrei Basarab <andy.basarab@gmail.com>"]
name = "cc1101-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cc1101 = { path = "../../drivers/cc1101", version = "0.1.3" }
embedded-hal = "1.0.0"
sys-time = { path = "../../modules/sys-time", version = "0.1.0" }
