[package]
authors = ["Andrei Basarab <andy.basarab@gmail.com>"]
name = "cubesat-1-fw-obc"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/cubesat-lab/cubesat-1-sw/"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
# common dependencies
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] } # NOTE: "critical-section-single-core" is critically important for "rtic-monotonics". Similar problem example: https://ferrous-systems.com/blog/defmt-rtt-linker-error/
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
embedded-hal = "0.2.7"
fugit = "0.3.6"
panic-halt = "0.2.0"

# "nucleo-f767zi-board" specific dependencies
cc1101-wrapper = { path = "../../../modules/cc1101-wrapper", version = "0.1.0", optional = true }
nucleo-f767zi = { path = "../../../boards/nucleo-f767zi", version = "0.1.0", optional = true }
rtic = { version = "2.0.1", features = ["cortex-m", "rtic-monotonics", "thumbv7-backend"], optional = true }
rtic-monotonics = { version = "1.2.0", features = ["cortex-m-systick", "embedded-hal-async", "systick-64bit", "stm32f767zi"], optional = true }
stm32f7xx-hal = { version = "0.7.0", features = ["stm32f767", "rt"], optional = true }

# "stm32vldiscovery" specific dependencies
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f100", "medium"], optional = true}


[dev-dependencies]
panic-semihosting = "0.6.0"


[features]
nucleo-f767zi-board = ["cc1101-wrapper", "nucleo-f767zi", "rtic", "rtic-monotonics", "stm32f7xx-hal"]
stm32vldiscovery = ["stm32f1xx-hal"]


[[example]]
name = "button_and_leds"
required-features = ["nucleo-f767zi-board"]

[[example]]
name = "hello_cubesat"
required-features = ["nucleo-f767zi-board"]

[[example]]
name = "hello_stm32vldiscovery"
required-features = ["stm32vldiscovery"]

[[example]]
name = "temp_on_serial"
required-features = ["nucleo-f767zi-board"]

[[example]]
name = "test_cc1101"
required-features = ["nucleo-f767zi-board"]
